Fix footer styling and accordion button align

--- a/_sass/empty-jar.scss
+++ b/_sass/empty-jar.scss
@@ -89,6 +89,12 @@ body {
         table {
             margin-bottom: 2rem;
         }
+
+        .accordion {
+            button {
+                text-align: left;
+            }
+        }
     }
 }
 
